# ChangeLog for net-www/mod_encoding
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_encoding/ChangeLog,v 1.5 2004/11/04 08:16:46 urilith Exp $

  04 Nov 2004; Michael Tindal <urilith@gentoo.org>
  mod_encoding-20021209.ebuild:
  IUSE fixes.

  24 May 2004; Chuck Short <zul@gentoo.org> mod_encoding-20021209.ebuild:
  Marked stable for x86.

  04 Apr 2004; Chuck Short <zul@gentoo.org> metadata.xml:
  Added metadata.xml updated headers.

*mod_encoding-20021209 (22 Jun 2003)

  22 Jun 2003; Donny Davies <woodchip@gentoo.org> :
  Initial import; from #22795.