@@ -1,15 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 285c7ab6790a74d7a110b5e6c76ea39a ChangeLog 630
+MD5 469dd1f15cf4d91e9b5be717f2c8d4ed ChangeLog 818
 MD5 d2da0e45d7e39184d1cb7abbe3879086 metadata.xml 159
-MD5 9c2e06ee20142e756def9bbe209d136d mod_encoding-20021209.ebuild 1358
-MD5 00857432d70d5a0a4f1723623feee5f6 files/digest-mod_encoding-20021209 73
+MD5 375975f560ff314a9858944f6bc1a724 mod_encoding-20021209-r1.ebuild 959
+MD5 e0ed33dcae52402ca51a8463105d0317 mod_encoding-20021209.ebuild 1357
 MD5 e274f697cbb8b61da07d216dd8100f47 files/mod_encoding.conf 336
+MD5 13df22776e5abc7c4413043c73a362b0 files/30_mod_encoding.conf 354
+MD5 00857432d70d5a0a4f1723623feee5f6 files/digest-mod_encoding-20021209-r1 73
+MD5 00857432d70d5a0a4f1723623feee5f6 files/digest-mod_encoding-20021209 73
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.9.10 (GNU/Linux)
+Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFBirwaI1lqEGTUzyQRAmIwAJ9ujvONkuY8LnL0ZKgq7i7zju4NcwCfaU/u
-1BJmPkV4Eftq0vgp9SlcOmA=
-=8rVK
+iD8DBQFCH2r6mPFBzbX68WERAiyEAJwOsR8B/C5oLDetsXSISbasxPaOiACfYpms
+f97YcaTA4sWZWogESxeK/FY=
+=DeN6
 -----END PGP SIGNATURE-----
