@@ -1,0 +1,16 @@
+<IfDefine ENCODING>
+	LoadModule encoding_module modules/mod_encoding.so
+</IfDefine>
+
+<IfModule mod_headers.c>
+  Header add MS-Author-Via "DAV"
+</IfModule>
+
+<IfModule mod_encoding.c>
+  EncodingEngine    on
+  NormalizeUsername on
+  SetServerEncoding     UTF-8
+  DefaultClientEncoding JA-AUTO-SJIS-MS SJIS
+
+  AddClientEncoding "cadaver/" EUC-JP
+</IfModule>
