@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_encoding/mod_encoding-20021209.ebuild,v 1.6 2004/11/04 08:16:46 urilith Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_encoding/mod_encoding-20021209.ebuild,v 1.7 2005/02/25 18:12:05 hollow Exp $
 
 DESCRIPTION="Apache module for non-ascii filename interoperability"
 HOMEPAGE="http://webdav.todo.gr.jp/"
