@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_encoding
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_encoding/ChangeLog,v 1.5 2004/11/04 08:16:46 urilith Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_encoding/ChangeLog,v 1.6 2005/02/25 18:12:05 hollow Exp $
+
+*mod_encoding-20021209-r1 (25 Feb 2005)
+
+  25 Feb 2005; Benedikt Boehm <hollow@gentoo.org>
+  +files/30_mod_encoding.conf, +mod_encoding-20021209-r1.ebuild:
+  uses new apache-module.eclass
 
   04 Nov 2004; Michael Tindal <urilith@gentoo.org>
   mod_encoding-20021209.ebuild:
